--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -30,24 +30,32 @@ main
 .titre
 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 .titre h1
 {
     font-family: "shrikhand", impact, serif; 
     font-size: 25px;
-    margin-left: 20px;
+    margin-left: -30px;
 }
 .coeur i
 {
     font-size: 25px;
-    margin-right: 40px;
+    margin-top: -12px;
+    position: absolute;
 }
-.coeur:hover i
+.coeurvide i
 {
-    display: flex;
-    background-color: $degrade;
+    color: $texte;
+}
+.coeurrempli i
+{
+    color: transparent
+}
+.coeurrempli:hover i
+{
+    color: $primaire;
 }
 .detailmenu
 {
@@ -111,33 +119,33 @@ h4
 .description_menu
 {
     color: $texte;
+    width: 100%;
 }
 .tarif
 {
     font-weight: 800;
     color: black;
     margin-right: 10px;
-    text-overflow: ellipsis;
 }
 .valide i
 {
     display: flex;
     color:transparent;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    padding: 10px;
-    width: 50px;
-    height: 60px;
-    margin-top: -31px;
-    border-radius: 0 20px 20px 0;
+    
     transform: scale(1);
-   
-
 }
 .valide:hover i
 {
     color: white;
+    font-size: 20px;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    width: 0%;
+    margin-top: -31px;
+    border-radius: 0 20px 20px 0;
+    width: 50px;
+    height: 60px;
     background-color: $tertiaire;
     transition: scaleX(1.05);
 }
@@ -221,9 +229,8 @@ h4
     {
         font-size: 35px;
         margin-bottom: 20px;
-        margin-left: 70px;
     }
-    .titre i
+    .coeur i
     {
         font-size: 35px;
         margin-bottom: 20px;
