--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -225,17 +225,34 @@
 			height: 80px;
 			flex-direction: column;
 			padding-left: 10px;
-			padding-top: 20px;
+			padding-top: 10px;
 			border-radius: 0 0 20px 20px;
-			line-height: 5px;
+			line-height: 30px;
+			position: relative;
 		}
-			.description i
+			.coeur i
 			{
 				font-size: 25px;
-				padding-left: 80%;
-				padding-right: 10px;
+				margin-left: 80%;
+				margin-right: 10px;
+				margin-top: -45px;
+				position: absolute;
+			}
+			.coeurvide i
+			{
 				color: $texte;
 			}
+			.coeurrempli i
+			{
+				color: transparent
+			}
+			.coeurrempli:hover i
+			{
+				color: $primaire;
+			}
+
+
+
 /*.....................TABLETTE................*/
 @media screen and (min-width: 768px)
 {
@@ -321,6 +338,10 @@
 	{
 		margin-left: 90px;
 	}
+	.coeur
+	{
+		margin-left: 80%;
+	}
 	
 }
 /*..................DESKTOP................................*/
@@ -387,14 +408,6 @@
 	.photo img
 	{
 		height: 300px ;
-	}
-	.description i
-	{
-		
-		padding: 0;
-		margin: 0;
-		margin-left: 90%;
-		
 	}
 	aside
 	{
