--- a/sass/style.css
+++ b/sass/style.css
@@ -177,9 +177,8 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -188,19 +187,25 @@ main {
 .titre h1 {
   font-family: "shrikhand", impact, serif;
   font-size: 25px;
-  margin-left: 20px;
+  margin-left: -30px;
 }
 
 .coeur i {
   font-size: 25px;
-  margin-right: 40px;
+  margin-top: -12px;
+  position: absolute;
 }
 
-.coeur:hover i {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: linear-gradient(to bottom right, #FF79DA, #9356DC);
+.coeurvide i {
+  color: #727171;
+}
+
+.coeurrempli i {
+  color: transparent;
+}
+
+.coeurrempli:hover i {
+  color: #9356DC;
 }
 
 .detailmenu {
@@ -292,13 +297,13 @@ h4 {
 
 .description_menu {
   color: #727171;
+  width: 100%;
 }
 
 .tarif {
   font-weight: 800;
   color: black;
   margin-right: 10px;
-  text-overflow: ellipsis;
 }
 
 .valide i {
@@ -306,24 +311,25 @@ h4 {
   display: -ms-flexbox;
   display: flex;
   color: transparent;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 20px;
-  padding: 10px;
-  width: 50px;
-  height: 60px;
-  margin-top: -31px;
-  border-radius: 0 20px 20px 0;
   -webkit-transform: scale(1);
           transform: scale(1);
 }
 
 .valide:hover i {
   color: white;
+  font-size: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 8px;
+  width: 0%;
+  margin-top: -31px;
+  border-radius: 0 20px 20px 0;
+  width: 50px;
+  height: 60px;
   background-color: #99E2D0;
   -webkit-transition: scaleX(1.05);
   transition: scaleX(1.05);
@@ -420,9 +426,8 @@ h4 {
   .titre h1 {
     font-size: 35px;
     margin-bottom: 20px;
-    margin-left: 70px;
   }
-  .titre i {
+  .coeur i {
     font-size: 35px;
     margin-bottom: 20px;
   }
@@ -792,16 +797,30 @@ aside {
       -ms-flex-direction: column;
           flex-direction: column;
   padding-left: 10px;
-  padding-top: 20px;
+  padding-top: 10px;
   border-radius: 0 0 20px 20px;
-  line-height: 5px;
+  line-height: 30px;
+  position: relative;
 }
 
-.description i {
+.coeur i {
   font-size: 25px;
-  padding-left: 80%;
-  padding-right: 10px;
+  margin-left: 80%;
+  margin-right: 10px;
+  margin-top: -45px;
+  position: absolute;
+}
+
+.coeurvide i {
   color: #727171;
+}
+
+.coeurrempli i {
+  color: transparent;
+}
+
+.coeurrempli:hover i {
+  color: #9356DC;
 }
 
 /*.....................TABLETTE................*/
@@ -874,6 +893,9 @@ aside {
   .description i {
     margin-left: 90px;
   }
+  .coeur {
+    margin-left: 80%;
+  }
 }
 
 /*..................DESKTOP................................*/
@@ -938,11 +960,6 @@ aside {
   }
   .photo img {
     height: 300px;
-  }
-  .description i {
-    padding: 0;
-    margin: 0;
-    margin-left: 90%;
   }
   aside {
     margin-left: 30.5%;
