--- a/public/style-menu.css
+++ b/public/style-menu.css
@@ -98,7 +98,7 @@ footer {
 
 @media screen and (min-width: 768px) {
   .logo img {
-    width: 20%;
+    width: 15%;
     height: auto;
   }
   footer {
@@ -125,7 +125,7 @@ footer {
     margin-right: 20px;
   }
   .logofooter p {
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
     width: 100%;
     margin: 0;
@@ -135,13 +135,16 @@ footer {
 
 @media screen and (min-width: 1294px) {
   .logo img {
-    width: 15%;
+    width: 10%;
     height: auto;
-    margin-right: 100px;
+  }
+  .menu_footer ul {
+    width: 50%;
+    margin-left: 510px;
   }
 }
 
-main {
+.main {
   background: rgba(245, 244, 244, 0.986);
   border-radius: 30px 30px 0 0;
   width: 100%;
@@ -251,8 +254,47 @@ h4 {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 220px;
-  -webkit-transition: 2s;
-  transition: 2s;
+}
+
+.blocmenu--entree {
+  -webkit-animation: apparition-menu 3s;
+          animation: apparition-menu 3s;
+}
+
+.blocmenu--plat {
+  -webkit-animation: apparition-menu 7s;
+          animation: apparition-menu 7s;
+}
+
+.blocmenu--dessert {
+  -webkit-animation: apparition-menu 11s;
+          animation: apparition-menu 11s;
+}
+
+@-webkit-keyframes apparition-menu {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(5vh);
+            transform: translateY(5vh);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes apparition-menu {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(5vh);
+            transform: translateY(5vh);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 
 .menu {
@@ -273,8 +315,6 @@ h4 {
       justify-content: space-around;
   padding-left: 10px;
   margin-left: 20px;
-  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
-          box-shadow: #b8b7b7 0px 5px 10px;
 }
 
 .descriptiontarif {
@@ -311,8 +351,8 @@ h4 {
   display: -ms-flexbox;
   display: flex;
   color: transparent;
-  -webkit-transform: rotate(0turn);
-          transform: rotate(0turn);
+  -webkit-transform: rotate(0turn) translate(0, 0);
+          transform: rotate(0turn) translate(0, 0);
 }
 
 .menu:hover {
@@ -334,8 +374,8 @@ h4 {
   padding: 13px;
   border-radius: 0 20px 20px 0;
   background-color: #99E2D0;
-  -webkit-transition: 2000ms translateX(0, 0);
-  transition: 2000ms translateX(0, 0);
+  -webkit-transition: 2000ms 10s translateX(80px, 0);
+  transition: 2000ms 10s translateX(80px, 0);
 }
 
 .menu:hover .valide i {
@@ -379,12 +419,12 @@ h4 {
 
 @media screen and (min-width: 768px) and (max-width: 1293px) {
   .photo_menu img {
-    height: 5%;
+    height: 500px;
   }
   .fleche {
     margin-left: 50px;
   }
-  main {
+  .main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -402,13 +442,13 @@ h4 {
 
 @media screen and (min-width: 1294px) {
   .photo_menu img {
-    height: 400px;
+    height: 300px;
     width: 100%;
   }
   .fleche {
     margin-left: 90px;
   }
-  main {
+  .main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -430,12 +470,12 @@ h4 {
     margin-top: 30px;
   }
   .titre h1 {
-    font-size: 35px;
+    font-size: 30px;
     margin-bottom: 20px;
   }
   .coeur i {
-    font-size: 35px;
-    margin-bottom: 20px;
+    font-size: 30px;
+    margin-top: -35px;
   }
   .menu {
     height: auto;
@@ -456,7 +496,7 @@ h4 {
             align-items: center;
   }
   .blocmenu {
-    width: 90%;
+    width: 100%;
     -ms-flex-pack: distribute;
         justify-content: space-around;
     -webkit-box-orient: horizontal;
@@ -471,7 +511,7 @@ h4 {
   h4 {
     font-size: 20px;
     margin-left: 20px;
-    margin-top: 15px;
+    margin-top: 20px;
   }
   .description_menu {
     font-size: 18px;
@@ -481,6 +521,11 @@ h4 {
   .tarif {
     font-size: 20px;
     margin-right: 20px;
+  }
+  .menu:hover .valide {
+    margin-top: -46px;
+    height: 117px;
+    padding: 20px;
   }
   .bouton button {
     width: 400px;
