--- a/public/style-menu.css
+++ b/public/style-menu.css
@@ -20,7 +20,7 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Robotoreg", impact, serif;
+  font-family: "Roboto", impact;
 }
 
 .logo {
